--- a/samplestore/src/main/res/layout/activity_payment.xml
+++ b/samplestore/src/main/res/layout/activity_payment.xml
@@ -132,6 +132,7 @@
         <LinearLayout
             android:id="@+id/group_manual_entry"
             android:orientation="vertical"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -151,6 +152,22 @@
                 />
 
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_shipping_details"
+            android:textSize="14sp"
+            android:layout_marginBottom="0dp"
+            android:textColor="@android:color/secondary_text_light"
+            />
+
+        <TextView
+            android:id="@+id/shipping_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_shipping_details"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            />
 
         <Button
             android:id="@+id/btn_purchase"
