--- a/samplestore/src/main/res/layout/activity_payment.xml
+++ b/samplestore/src/main/res/layout/activity_payment.xml
@@ -155,11 +155,27 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/enter_shipping_details"
+            android:text="@string/enter_details"
             android:textSize="14sp"
             android:layout_marginBottom="0dp"
             android:textColor="@android:color/secondary_text_light"
             />
+
+        <TextView
+            android:id="@+id/payment_source"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/enter_details"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            />
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/enter_shipping_details"
+        android:textSize="14sp"
+        android:layout_marginBottom="0dp"
+        android:textColor="@android:color/secondary_text_light"
+        />
 
         <TextView
             android:id="@+id/shipping_info"
